# malea

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  format.sh
include/: mnist.hpp  mnist_loader.hpp  network.hpp  network_functions.hpp  optimize.hpp  util.hpp  view-synth.hpp
src/: mnist.cpp  mnist_evaluate.cpp  mnist_loader.cpp  mnist_train.cpp  network.cpp  network_functions.cpp  optimize.cpp  train.cpp  util.cpp  xor_train.cpp
tests/: CMakeLists.txt  mnist_loader_test.cpp  network_test.cpp  optimize_test.cpp  train_test.cpp
